# whatsapp-exporter

./: .gitignore  README.md  pyproject.toml
resources/: template.html.jinja2
src/whatsapp_exporter/: __main__.py  renderer.py
