[project]
name = "whatsapp-exporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.7"
dependencies = [
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
]

[tool.uv]
package = true

[project.scripts]
waexp = "whatsapp_exporter.__main__:main"
